--- a/css/main.css
+++ b/css/main.css
@@ -873,7 +873,7 @@ button.ui-button {
 }
 
 .ui-widget {
-    background: linear-gradient(to left bottom, #00B4DB, #0083B0);
+    background: linear-gradient(to left bottom, rgba(0, 179, 219, 0.959), rgba(0, 132, 176, 0.952));
     border-radius: 0px;
     border: none;
 }
@@ -1435,6 +1435,34 @@ button.ui-button {
 
 
 /* ------------------------------------animation end ---------------------------------------------------------- */
+
+
+/* custom scroll bar */
+
+.ui-widget-content::-webkit-scrollbar {
+    width: 10px;
+}
+
+.ui-widget-content::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.ui-widget-content::-webkit-scrollbar-thumb {
+    background: transparent;
+}
+
+.ui-widget-content::-webkit-scrollbar-track:hover {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+.ui-widget-content::-webkit-scrollbar-thumb:hover {
+    background-color: #F90;
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+}
+
+
+/* custom scroll bar block end */
 
 
 /*.logo:hover {
