--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,3 +7,23 @@
     font-family: 'Audrey';
     src: url('fonts/Audrey-Medium.otf');
 }
+
+@font-face {
+    font-family: 'zefani';
+    src: url('fonts/Zefani_Uppercase_Demo-Regular.otf');
+}
+
+@font-face {
+    font-family: 'product sans';
+    src: url('fonts/Product\ Sans\ Regular.ttf');
+}
+
+@font-face {
+    font-family: 'product sans bold';
+    src: url('fonts/Product\ Sans\ Bold.ttf');
+}
+
+@font-face {
+    font-family: 'product sans italic';
+    src: url('fonts/Product\ Sans\ Italic.ttf');
+}
