--- a/css/gallery2.css
+++ b/css/gallery2.css
@@ -28,314 +28,434 @@ section:after {
 }
 
 section:nth-child(1) {
-    -moz-animation: section-1 8s both infinite;
-    -webkit-animation: section-1 8s both infinite;
-    animation: section-1 8s both infinite;
+    -moz-animation: section-1 18s both infinite;
+    -webkit-animation: section-1 18s both infinite;
+    animation: section-1 18s both infinite;
 }
 
 @-moz-keyframes section-1 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 0% 0%;
         -webkit-clip-path: polygon(23% 18%, 95% 13%, 100% 91%, 55% 87%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 0% 0%;
         -webkit-clip-path: polygon(95% 10%, 100% 80%, 62% 77%, 45% 12%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 0% 0%;
         -webkit-clip-path: polygon(100% 67%, 48% 63%, 28% 9%, 95% 3%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 0% 0%;
         -webkit-clip-path: polygon(78% 72%, 58% 34%, 95% 27%, 100% 73%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 0% 0%;
+        -webkit-clip-path: polygon(10% 20%, 10% 80%, 98% 90%, 98% 30%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 0% 0%;
+        -webkit-clip-path: polygon(50% 40%, 50% 60%, 98% 66%, 98% 34%);
     }
 }
 
 @-webkit-keyframes section-1 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 0% 0%;
         -webkit-clip-path: polygon(23% 18%, 95% 13%, 100% 91%, 55% 87%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 0% 0%;
         -webkit-clip-path: polygon(95% 10%, 100% 80%, 62% 77%, 45% 12%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 0% 0%;
         -webkit-clip-path: polygon(100% 67%, 48% 63%, 28% 9%, 95% 3%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 0% 0%;
         -webkit-clip-path: polygon(78% 72%, 58% 34%, 95% 27%, 100% 73%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 0% 0%;
+        -webkit-clip-path: polygon(10% 20%, 10% 80%, 98% 90%, 98% 30%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 0% 0%;
+        -webkit-clip-path: polygon(50% 40%, 50% 60%, 98% 66%, 98% 34%);
     }
 }
 
 @keyframes section-1 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 0% 0%;
         -webkit-clip-path: polygon(23% 18%, 95% 13%, 100% 91%, 55% 87%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 0% 0%;
         -webkit-clip-path: polygon(95% 10%, 100% 80%, 62% 77%, 45% 12%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 0% 0%;
         -webkit-clip-path: polygon(100% 67%, 48% 63%, 28% 9%, 95% 3%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 0% 0%;
         -webkit-clip-path: polygon(78% 72%, 58% 34%, 95% 27%, 100% 73%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 0% 0%;
+        -webkit-clip-path: polygon(10% 20%, 10% 80%, 98% 90%, 98% 30%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 0% 0%;
+        -webkit-clip-path: polygon(50% 40%, 50% 60%, 98% 66%, 98% 34%);
     }
 }
 
 section:nth-child(2) {
-    -moz-animation: section-2 8s both infinite;
-    -webkit-animation: section-2 8s both infinite;
-    animation: section-2 8s both infinite;
+    -moz-animation: section-2 18s both infinite;
+    -webkit-animation: section-2 18s both infinite;
+    animation: section-2 18s both infinite;
 }
 
 @-moz-keyframes section-2 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 33.33333% 0%;
         -webkit-clip-path: polygon(0% 7%, 100% 9%, 95% 93%, 5% 95%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 33.33333% 0%;
         -webkit-clip-path: polygon(100% 3%, 95% 95%, 5% 90%, 0% 5%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 33.33333% 0%;
         -webkit-clip-path: polygon(95% 83%, 5% 78%, 0% 6%, 100% 11%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 33.33333% 0%;
         -webkit-clip-path: polygon(5% 79%, 0% 21%, 100% 16%, 95% 83%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 33.33333% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 90%, 98% 80%, 98% 20%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 33.33333% 0%;
+        -webkit-clip-path: polygon(2% 20%, 2% 90%, 98% 80%, 98% 30%);
     }
 }
 
 @-webkit-keyframes section-2 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 33.33333% 0%;
         -webkit-clip-path: polygon(0% 7%, 100% 9%, 95% 93%, 5% 95%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 33.33333% 0%;
         -webkit-clip-path: polygon(100% 3%, 95% 95%, 5% 90%, 0% 5%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 33.33333% 0%;
         -webkit-clip-path: polygon(95% 83%, 5% 78%, 0% 6%, 100% 11%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 33.33333% 0%;
         -webkit-clip-path: polygon(5% 79%, 0% 21%, 100% 16%, 95% 83%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 33.33333% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 90%, 98% 80%, 98% 20%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 33.33333% 0%;
+        -webkit-clip-path: polygon(2% 20%, 2% 90%, 98% 80%, 98% 30%);
     }
 }
 
 @keyframes section-2 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 33.33333% 0%;
         -webkit-clip-path: polygon(0% 7%, 100% 9%, 95% 93%, 5% 95%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 33.33333% 0%;
         -webkit-clip-path: polygon(100% 3%, 95% 95%, 5% 90%, 0% 5%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 33.33333% 0%;
         -webkit-clip-path: polygon(95% 83%, 5% 78%, 0% 6%, 100% 11%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 33.33333% 0%;
         -webkit-clip-path: polygon(5% 79%, 0% 21%, 100% 16%, 95% 83%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 33.33333% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 90%, 98% 80%, 98% 20%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 33.33333% 0%;
+        -webkit-clip-path: polygon(2% 20%, 2% 90%, 98% 80%, 98% 30%);
     }
 }
 
 section:nth-child(3) {
-    -moz-animation: section-3 8s both infinite;
-    -webkit-animation: section-3 8s both infinite;
-    animation: section-3 8s both infinite;
+    -moz-animation: section-3 18s both infinite;
+    -webkit-animation: section-3 18s both infinite;
+    animation: section-3 18s both infinite;
 }
 
 @-moz-keyframes section-3 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 66.66666% 0%;
         -webkit-clip-path: polygon(5% 11%, 100% 14%, 95% 88%, 0% 91%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 66.66666% 0%;
         -webkit-clip-path: polygon(100% 14%, 95% 84%, 0% 91%, 5% 7%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 66.66666% 0%;
         -webkit-clip-path: polygon(95% 79%, 0% 86%, 5% 7%, 100% 3%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 66.66666% 0%;
         -webkit-clip-path: polygon(0% 85%, 5% 14%, 100% 3%, 95% 95%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 66.6666% 0%;
+        -webkit-clip-path: polygon(2% 20%, 2% 80%, 98% 90%, 98% 30%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 66.66666% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 80%, 98% 90%, 98% 20%);
     }
 }
 
 @-webkit-keyframes section-3 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 66.66666% 0%;
         -webkit-clip-path: polygon(5% 11%, 100% 14%, 95% 88%, 0% 91%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 66.66666% 0%;
         -webkit-clip-path: polygon(100% 14%, 95% 84%, 0% 91%, 5% 7%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 66.66666% 0%;
         -webkit-clip-path: polygon(95% 79%, 0% 86%, 5% 7%, 100% 3%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 66.66666% 0%;
         -webkit-clip-path: polygon(0% 85%, 5% 14%, 100% 3%, 95% 95%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 66.6666% 0%;
+        -webkit-clip-path: polygon(2% 20%, 2% 80%, 98% 90%, 98% 30%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 66.66666% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 80%, 98% 90%, 98% 20%);
     }
 }
 
 @keyframes section-3 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 66.66666% 0%;
         -webkit-clip-path: polygon(5% 11%, 100% 14%, 95% 88%, 0% 91%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 66.66666% 0%;
         -webkit-clip-path: polygon(100% 14%, 95% 84%, 0% 91%, 5% 7%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 66.66666% 0%;
         -webkit-clip-path: polygon(95% 79%, 0% 86%, 5% 7%, 100% 3%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 66.66666% 0%;
         -webkit-clip-path: polygon(0% 85%, 5% 14%, 100% 3%, 95% 95%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 66.6666% 0%;
+        -webkit-clip-path: polygon(2% 20%, 2% 80%, 98% 90%, 98% 30%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 66.66666% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 80%, 98% 90%, 98% 20%);
     }
 }
 
 section:nth-child(4) {
-    -moz-animation: section-4 8s both infinite;
-    -webkit-animation: section-4 8s both infinite;
-    animation: section-4 8s both infinite;
+    -moz-animation: section-4 18s both infinite;
+    -webkit-animation: section-4 18s both infinite;
+    animation: section-4 18s both infinite;
 }
 
 @-moz-keyframes section-4 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 99.99999% 0%;
         -webkit-clip-path: polygon(5% 18%, 89% 21%, 62% 73%, 0% 83%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 99.99999% 0%;
         -webkit-clip-path: polygon(57% 31%, 45% 67%, 0% 77%, 5% 18%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 99.99999% 0%;
         -webkit-clip-path: polygon(45% 57%, 0% 67%, 5% 8%, 72% 12%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 99.99999% 0%;
         -webkit-clip-path: polygon(0% 77%, 5% 18%, 47% 21%, 32% 67%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 99.99999% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 90%, 90% 80%, 90% 20%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 99.99999% 0%;
+        -webkit-clip-path: polygon(2% 34%, 2% 66%, 50% 60%, 50% 40%);
     }
 }
 
 @-webkit-keyframes section-4 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 99.99999% 0%;
         -webkit-clip-path: polygon(5% 18%, 89% 21%, 62% 73%, 0% 83%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 99.99999% 0%;
         -webkit-clip-path: polygon(57% 31%, 45% 67%, 0% 77%, 5% 18%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 99.99999% 0%;
         -webkit-clip-path: polygon(45% 57%, 0% 67%, 5% 8%, 72% 12%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 99.99999% 0%;
         -webkit-clip-path: polygon(0% 77%, 5% 18%, 47% 21%, 32% 67%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 99.99999% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 90%, 90% 80%, 90% 20%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 99.99999% 0%;
+        -webkit-clip-path: polygon(2% 34%, 2% 66%, 50% 60%, 50% 40%);
     }
 }
 
 @keyframes section-4 {
     0%,
-    20%,
+    14%,
     100% {
         background: url("../images/gallery_images/img1.jpg") 99.99999% 0%;
         -webkit-clip-path: polygon(5% 18%, 89% 21%, 62% 73%, 0% 83%);
     }
-    25%,
-    45% {
+    16%,
+    30% {
         background: url("../images/gallery_images/img2.png") 99.99999% 0%;
         -webkit-clip-path: polygon(57% 31%, 45% 67%, 0% 77%, 5% 18%);
     }
-    50%,
-    70% {
+    33%,
+    47% {
         background: url("../images/gallery_images/img3.JPG") 99.99999% 0%;
         -webkit-clip-path: polygon(45% 57%, 0% 67%, 5% 8%, 72% 12%);
     }
-    75%,
-    95% {
+    49%,
+    63% {
         background: url("../images/gallery_images/img4.JPG") 99.99999% 0%;
         -webkit-clip-path: polygon(0% 77%, 5% 18%, 47% 21%, 32% 67%);
+    }
+    66%,
+    80% {
+        background: url("../images/gallery_images/img5.JPG") 99.99999% 0%;
+        -webkit-clip-path: polygon(2% 30%, 2% 90%, 90% 80%, 90% 20%);
+    }
+    82%,
+    97% {
+        background: url("../images/gallery_images/img6.JPG") 99.99999% 0%;
+        -webkit-clip-path: polygon(2% 34%, 2% 66%, 50% 60%, 50% 40%);
     }
 }
 
