--- a/css/gallery2.css
+++ b/css/gallery2.css
@@ -474,3 +474,9 @@ section:nth-child(4) {
         transform: scale(0.75, 0.75);
     }
 }
+
+.ball {
+    position: absolute;
+    border-radius: 100%;
+    opacity: 0.7;
+}
