--- a/css/theme.css
+++ b/css/theme.css
@@ -97,7 +97,18 @@
 
 /*End! is that simple! */
 
-.theme-heading-card {
+.theme-heading-card-1 {
+    width: 90%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 20px;
+    padding: 4% 10% 5% 10%;
+    margin-top: 10%;
+}
+
+.theme-heading-card-2 {
     width: 90%;
     position: relative;
     left: 50%;
@@ -250,19 +261,34 @@
 /* Media queries - Responsive timeline on screens less than 600px wide */
 
 @media screen and (max-width: 600px) {
+    .theme-heading-card-2 {
+        padding: 4% 0 5% 0;
+        width: 95%;
+    }
+    .theme-heading {
+        font-size: 1.5em;
+    }
+    .theme-content {
+        font-size: 1em;
+    }
+    .t-container::after {
+        height: 15px;
+        width: 15px;
+    }
     /* Place the timelime to the left */
     .timeline::after {
-        left: 31px;
+        left: 27.5px;
+        width: 3px;
     }
     /* Full-width containers */
     .t-container {
         width: 100%;
-        padding-left: 70px;
+        padding-left: 60px;
         padding-right: 25px;
     }
     /* Make sure that all arrows are pointing leftwards */
     .t-container::before {
-        left: 60px;
+        left: 50px;
         border: medium solid white;
         border-width: 10px 10px 10px 0;
         border-color: transparent white transparent transparent;
