--- a/css/theme.css
+++ b/css/theme.css
@@ -18,7 +18,7 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0.5;
-    background: url('../images/d_theme.jpg');
+    background: url('../images/d-theme.jpg');
     background-position: center center;
     background-origin: content-box;
     background-size: cover;
@@ -34,7 +34,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../images/d_theme.jpg');
+    background: url('../images/d-theme.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-origin: content-box;
@@ -134,7 +134,7 @@ body {
     font-family: 'Nosifer', cursive;
     letter-spacing: 5px;
     margin-bottom: 5%;
-    background: linear-gradient(to bottom, white, white 50%, #720800 60%);
+    background: linear-gradient(to bottom, white, white 50%, #d10000 60%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -150,7 +150,8 @@ body {
 
 .wizard-logo {
     position: absolute;
-    right: 0;
+    width: 320px;
+    right: 50px;
     top: -50%;
     z-index: -3;
 }
