--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body {
 /*navbar collapse background*/
 
 .collapse-nav.collapse.show {
-    background-color: rgb(68, 1, 53);
+    background-color: rgba(68, 1, 53, 0.7);
 }
 
 
