--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Fondamento&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Srisakdi&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text&display=swap');
 body {
     position: absolute;
     width: 100%;
@@ -450,17 +452,17 @@ a {
 }
 
 .msg-body {
-    /* font-family: 'Srisakdi', cursive; */
-    font-family: 'Tangerine', cursive;
+    font-family: 'Crimson Text', serif;
+    /* font-family: 'Tangerine', cursive; */
     font-weight: 400;
-    font-size: 2.3em;
+    font-size: 1.5em;
     text-indent: 10%;
-    padding: 5% 5% 5% 5%;
+    padding: 2% 5% 5% 5%;
 }
 
 .msg-body span {
     font-family: 'Fondamento', cursive;
-    font-size: 0.7em;
+    font-size: 0.9em;
     font-style: italic;
 }
 
@@ -1788,10 +1790,10 @@ button.ui-button {
         top: 90%;
     }
     .msg-body {
-        font-size: 1.6em;
-        /* text-align: left; */
+        font-size: 1.1em;
+        text-align: justify;
         padding: 5% 10% 15% 10%;
-        text-indent: 5%;
+        text-indent: 15%;
     }
     .faq-content-h {
         text-align: center;
