--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Crimson+Text&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Forum&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Philosopher&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Abel&display=swap');
 body {
     position: absolute;
     width: 100%;
@@ -977,6 +978,7 @@ button.ui-button {
 }
 
 .para-dlg-4 {
+    font-family: 'Abel', sans-serif;
     padding: 2% 4% 2% 18%;
     text-align: left;
 }
