--- a/css/main.css
+++ b/css/main.css
@@ -1586,6 +1586,38 @@ button.ui-button {
 /* custom scroll bar block end */
 
 
+/* Responsive Google Form */
+
+.resp-google-form {
+    position: relative;
+    height: 1300px;
+    width: 700px;
+    border: none;
+    transform: translateX(-50%);
+    left: 50%;
+    margin-top: 4em;
+}
+
+
+/* End ----------------------------- */
+
+
+/* Responsive Google map */
+
+.resp-google-map {
+    position: relative;
+    width: 800px;
+    height: 400px;
+    border: none;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 4em;
+}
+
+
+/*      End -------------------- */
+
+
 /*.logo:hover {
         visibility: hidden;
     }*/
@@ -1779,6 +1811,13 @@ button.ui-button {
     }
     #carousel-space.display-2d {
         display: -webkit-box;
+    }
+    .resp-google-form {
+        width: 100%;
+    }
+    .resp-google-map {
+        width: 100%;
+        height: 400px;
     }
 }
 
